--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -338,7 +338,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0x7-3d-ur7">
-                                <rect key="frame" x="16" y="348" width="141" height="30"/>
+                                <rect key="frame" x="16" y="424" width="133" height="30"/>
                                 <state key="normal" title="Select from gallery">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -347,7 +347,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBO-Kk-YJN">
-                                <rect key="frame" x="16" y="310" width="98" height="30"/>
+                                <rect key="frame" x="16" y="386" width="93" height="30"/>
                                 <state key="normal" title="Take a photo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -355,7 +355,7 @@
                                     <action selector="takePhoto:" destination="1zm-Wi-V1Z" eventType="touchUpInside" id="kcb-Wa-pJn"/>
                                 </connections>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="iDM-zr-1HD">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="iDM-zr-1HD">
                                 <rect key="frame" x="115" y="114" width="182" height="31"/>
                                 <connections>
                                     <action selector="sliderChanged:" destination="1zm-Wi-V1Z" eventType="valueChanged" id="QyI-t6-1wQ"/>
@@ -368,7 +368,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkf-KB-wno">
-                                <rect key="frame" x="16" y="424" width="34" height="30"/>
+                                <rect key="frame" x="16" y="500" width="34" height="30"/>
                                 <state key="normal" title="Save">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -383,17 +383,21 @@
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0QN-eB-f08"/>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K1E-RO-QuO">
-                                <rect key="frame" x="16" y="386" width="126" height="30"/>
+                                <rect key="frame" x="16" y="462" width="126" height="30"/>
                                 <state key="normal" title="Add geolocation ?">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WWQ-aJ-8YJ"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A6V-aS-77a">
+                                <rect key="frame" x="16" y="173" width="182" height="205"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="descriptionTextInput" destination="xBA-8l-adg" id="VM4-3V-UTa"/>
-                        <outlet property="imageView" destination="0QN-eB-f08" id="7v5-oM-Uk2"/>
+                        <outlet property="imageView" destination="A6V-aS-77a" id="LYh-hO-xn3"/>
                         <outlet property="slider" destination="iDM-zr-1HD" id="Oub-gw-JPT"/>
                         <outlet property="sliderLabel" destination="ndq-eU-XbE" id="Idu-fG-LUt"/>
                         <outlet property="titleTextInput" destination="8lY-Q3-opD" id="yfN-nN-hhu"/>
