Added moving and passing info to detail view

--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -362,7 +362,7 @@
         <!--Offer Details View Controller-->
         <scene sceneID="LDb-rq-faM">
             <objects>
-                <viewController id="mN7-F8-50y" customClass="OfferDetailsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="offerDetails" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mN7-F8-50y" customClass="OfferDetailsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0ee-fj-Srx"/>
                         <viewControllerLayoutGuide type="bottom" id="W0d-Qs-Bh4"/>
@@ -370,12 +370,33 @@
                     <view key="view" contentMode="scaleToFill" id="5Gw-Ox-WRJ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6vL-k0-bee"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N78-b3-Wmv">
+                                <rect key="frame" x="285" y="83" width="266" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azj-br-NMN">
+                                <rect key="frame" x="408" y="508" width="161" height="59"/>
+                                <state key="normal" title="Want it!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionWantPet:" destination="mN7-F8-50y" eventType="touchUpInside" id="00e-b7-cpG"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="labelTitle" destination="N78-b3-Wmv" id="yGZ-6t-Hpm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0BS-gt-tEh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2656" y="158"/>
+            <point key="canvasLocation" x="2658" y="156"/>
         </scene>
         <!--Add Offer View Controller-->
         <scene sceneID="yBk-vs-c2d">
@@ -546,7 +567,7 @@
                         </connections>
                     </tableView>
                     <connections>
-                        <segue destination="mN7-F8-50y" kind="show" id="U3Z-Qr-C2t"/>
+                        <segue destination="mN7-F8-50y" kind="show" identifier="showOfferDetails" id="U3Z-Qr-C2t"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lyB-To-GLd" userLabel="First Responder" sceneMemberID="firstResponder"/>
