--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -2,6 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AOn-9I-A5i">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -203,6 +205,18 @@
                             <constraint firstItem="Il2-8j-NAR" firstAttribute="top" secondItem="FcH-6O-0Zv" secondAttribute="bottom" constant="19" id="rks-D3-y4i"/>
                         </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem style="plain" id="ZJr-p7-yqU">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nva-uD-tLe">
+                                <rect key="frame" x="-23" y="-15" width="133" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="emailTextField" destination="gwc-mi-MrI" id="YgR-t3-ny4"/>
                         <outlet property="phoneTextField" destination="wdq-9u-CNx" id="SlR-7C-yD3"/>
@@ -371,39 +385,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6vL-k0-bee">
-                                <rect key="frame" x="23" y="81" width="200" height="200"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N78-b3-Wmv">
+                                <rect key="frame" x="176" y="72" width="408" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZc-Ks-1ZT">
+                                <rect key="frame" x="176" y="94" width="299" height="141"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="3mI-0H-bos"/>
-                                    <constraint firstAttribute="height" constant="200" id="osK-Xa-WzR"/>
+                                    <constraint firstAttribute="width" constant="299" id="gXX-is-YXk"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N78-b3-Wmv">
-                                <rect key="frame" x="238" y="97" width="266" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZc-Ks-1ZT">
-                                <rect key="frame" x="33" y="289" width="266" height="171"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLw-Nf-c6E">
+                                <rect key="frame" x="16" y="243" width="62" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="pE0-yR-5Ai"/>
+                                    <constraint firstAttribute="width" constant="62" id="wM8-qh-HD4"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLw-Nf-c6E">
-                                <rect key="frame" x="269" y="140" width="62" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BGN" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DNh-jC-fSN">
+                                <rect key="frame" x="86" y="243" width="205" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="205" id="7Jl-uT-Uf5"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="BGN" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DNh-jC-fSN">
-                                <rect key="frame" x="269" y="184" width="205" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azj-br-NMN">
-                                <rect key="frame" x="227" y="468" width="129" height="27"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azj-br-NMN">
+                                <rect key="frame" x="16" y="287" width="62" height="23"/>
                                 <state key="normal" title="Want it!">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -411,12 +428,34 @@
                                     <action selector="actionWantPet:" destination="mN7-F8-50y" eventType="touchUpInside" id="00e-b7-cpG"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6vL-k0-bee">
+                                <rect key="frame" x="16" y="72" width="152" height="163"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="152" id="QeK-F8-AXh"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="JZc-Ks-1ZT" firstAttribute="leading" secondItem="6vL-k0-bee" secondAttribute="trailing" constant="58" id="GMG-2Q-h97"/>
-                            <constraint firstItem="6vL-k0-bee" firstAttribute="top" secondItem="0ee-fj-Srx" secondAttribute="bottom" constant="45" id="OvK-ik-Dt7"/>
-                            <constraint firstItem="DNh-jC-fSN" firstAttribute="top" secondItem="6vL-k0-bee" secondAttribute="bottom" constant="74" id="OyM-y7-D9P"/>
+                            <constraint firstItem="DNh-jC-fSN" firstAttribute="top" secondItem="JZc-Ks-1ZT" secondAttribute="bottom" constant="8" id="1Fa-Hd-fu5"/>
+                            <constraint firstItem="N78-b3-Wmv" firstAttribute="trailing" secondItem="5Gw-Ox-WRJ" secondAttribute="trailingMargin" id="DGx-NH-4ja"/>
+                            <constraint firstItem="N78-b3-Wmv" firstAttribute="baseline" secondItem="JZc-Ks-1ZT" secondAttribute="firstBaseline" constant="-8" id="EEa-k9-9ay"/>
+                            <constraint firstItem="6vL-k0-bee" firstAttribute="top" secondItem="0ee-fj-Srx" secondAttribute="bottom" constant="8" symbolic="YES" id="MRN-c1-FsS"/>
+                            <constraint firstItem="DNh-jC-fSN" firstAttribute="leading" secondItem="fLw-Nf-c6E" secondAttribute="trailing" constant="8" symbolic="YES" id="Ogd-r3-sbt"/>
+                            <constraint firstItem="JZc-Ks-1ZT" firstAttribute="top" secondItem="0ee-fj-Srx" secondAttribute="bottom" constant="30" id="Ruh-ja-i86"/>
+                            <constraint firstItem="fLw-Nf-c6E" firstAttribute="leading" secondItem="6vL-k0-bee" secondAttribute="leading" id="aFa-bJ-otw"/>
+                            <constraint firstItem="N78-b3-Wmv" firstAttribute="top" secondItem="6vL-k0-bee" secondAttribute="top" id="b4Q-tf-mN7"/>
+                            <constraint firstItem="JZc-Ks-1ZT" firstAttribute="leading" secondItem="N78-b3-Wmv" secondAttribute="leading" id="bwd-Bd-JSq"/>
+                            <constraint firstItem="W0d-Qs-Bh4" firstAttribute="top" secondItem="azj-br-NMN" secondAttribute="bottom" constant="290" id="dRY-gp-0C4"/>
+                            <constraint firstItem="DNh-jC-fSN" firstAttribute="baseline" secondItem="fLw-Nf-c6E" secondAttribute="baseline" id="ewe-IX-MxC"/>
+                            <constraint firstItem="azj-br-NMN" firstAttribute="leading" secondItem="5Gw-Ox-WRJ" secondAttribute="leadingMargin" id="iK6-FK-szW"/>
+                            <constraint firstItem="N78-b3-Wmv" firstAttribute="leading" secondItem="6vL-k0-bee" secondAttribute="trailing" constant="8" symbolic="YES" id="j6b-TB-7h2"/>
+                            <constraint firstItem="W0d-Qs-Bh4" firstAttribute="top" secondItem="DNh-jC-fSN" secondAttribute="bottom" constant="321" id="q6e-9z-3Yb"/>
+                            <constraint firstItem="fLw-Nf-c6E" firstAttribute="top" secondItem="6vL-k0-bee" secondAttribute="bottom" constant="8" symbolic="YES" id="rZK-SN-Qy7"/>
+                            <constraint firstItem="azj-br-NMN" firstAttribute="leading" secondItem="fLw-Nf-c6E" secondAttribute="leading" id="s26-FE-uSW"/>
+                            <constraint firstItem="azj-br-NMN" firstAttribute="top" secondItem="fLw-Nf-c6E" secondAttribute="bottom" constant="8" symbolic="YES" id="s8m-47-ax5"/>
+                            <constraint firstItem="fLw-Nf-c6E" firstAttribute="firstBaseline" secondItem="DNh-jC-fSN" secondAttribute="firstBaseline" id="sGS-Wn-zkP"/>
+                            <constraint firstItem="azj-br-NMN" firstAttribute="trailing" secondItem="fLw-Nf-c6E" secondAttribute="trailing" id="uFz-fx-YpD"/>
                         </constraints>
                     </view>
                     <connections>
