--- a/Pets/Pets/HomeUITableViewCell.xib
+++ b/Pets/Pets/HomeUITableViewCell.xib
@@ -32,7 +32,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TAc-Pm-NGb">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TAc-Pm-NGb">
                         <rect key="frame" x="0.0" y="0.0" width="122" height="99"/>
                     </imageView>
                 </subviews>
